--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-shell": "^2.3.3",
+    "@vicons/ionicons5": "^0.13.0",
     "alova": "^3.4.1",
     "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
@@ -48,6 +49,7 @@
     "unplugin-vue-components": "^30.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^6.0.3",
+    "vite-plugin-vue-layouts": "^0.11.0",
     "vue-tsc": "^2.1.10"
   }
 }
