--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.15",
+    "@iconify-json/solar": "^1.2.5",
     "@rushstack/eslint-patch": "^1.15.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.0.3",
