feat(dashboard): optimize UI and trend chart components
- 统一仪表盘卡片圆角为 16px
- 将趋势图从 SVG 升级为功能完备的 ECharts 组件，支持平滑曲线、渐变填充和暗色模式适配
- 修复 UnoCSS Carbon 图标加载报错问题
- 优化面包屑显示样式，增加毛玻璃效果与视觉层次感
- 为趋势图增加近一周、近一月及年度数据的动态切换功能

- Unified dashboard card border radius to 16px.
- Upgraded trend chart from SVG to a feature-rich ECharts component, supporting smooth curves, gradient fills, and dark mode.
- Fixed UnoCSS Carbon icon loading errors.
- Optimized breadcrumb styling with glassmorphism and enhanced visual hierarchy.
- Added dynamic data switching for weekly, monthly, and yearly views in the trend chart.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@vicons/ionicons5": "^0.13.0",
     "alova": "^3.4.1",
+    "echarts": "^6.0.0",
     "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
