--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,9 +3,10 @@
     "Vue.volar",
     "tauri-apps.tauri-vscode",
     "rust-lang.rust-analyzer",
-            "iconkief.icon-theme-material",
-        "antfu.iconify",
-        "tauri-apps.tauri-vscode",
-        "antfu.unocss",
+    "iconkief.icon-theme-material",
+    "antfu.iconify",
+    "tauri-apps.tauri-vscode",
+    "antfu.unocss",
+    "pkief.material-icon-theme",
   ]
 }
